# LR7

./: .gitignore  CMakeLists.txt  main.cpp
Task_1/header-files/: logic.h
Task_1/src/: logic.cpp  task1.cpp
Task_1/tests/: tests.cpp
Task_2/header-files/: logic.h
Task_2/src/: logic.cpp  task2.cpp
Task_2/tests/: tests.cpp
Task_3/header-files/: logic.h
Task_3/src/: logic.cpp  task3.cpp
Task_4/header-files/: logic.h
Task_4/src/: logic.cpp  task4.cpp
Task_5/header-files/: constants.h  funcs.h
Task_5/src/: constants.cpp  funcs.cpp  task5.cpp
general/header-files/: constants.h  utils.h
general/src/: utils.cpp
